--- a/Watch Next/Base.lproj/Main.storyboard
+++ b/Watch Next/Base.lproj/Main.storyboard
@@ -96,14 +96,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3T-DK-boY">
-                                <rect key="frame" x="147" y="650" width="135" height="83"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="RDi-Q1-Bd7" kind="show" id="oCh-Mc-uqk"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <gestureRecognizers/>
@@ -153,7 +145,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1053.6231884057972" y="-1811.3839285714284"/>
+            <point key="canvasLocation" x="1900" y="-1811"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="uTs-sT-uKl">
@@ -231,7 +223,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kwh-k5-xC1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2682.608695652174" y="-1811.3839285714284"/>
+            <point key="canvasLocation" x="3696" y="-1811"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="4E6-r8-h3C">
@@ -321,7 +313,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NaW-3v-EOQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1995.6521739130437" y="491.51785714285711"/>
+            <point key="canvasLocation" x="2806" y="492"/>
         </scene>
         <!--User View Controller-->
         <scene sceneID="XcH-yW-0xO">
@@ -402,14 +394,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RAa-xd-SdZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2950.7246376811595" y="491.51785714285711"/>
+            <point key="canvasLocation" x="3645" y="492"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="VZf-Vd-fzc">
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="tsv-4I-Ju0" customClass="HomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TdP-yW-f4x">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="776"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="f1K-mf-je3">
@@ -459,7 +451,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ml-Mj-70j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1018.840579710145" y="491.51785714285711"/>
+            <point key="canvasLocation" x="1257" y="1219"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="n9h-W4-ayz">
@@ -472,7 +464,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="OGO-sw-VWa" kind="relationship" relationship="viewControllers" id="YM9-JZ-vIC"/>
+                        <segue destination="RDi-Q1-Bd7" kind="relationship" relationship="viewControllers" id="r0t-jj-az2"/>
                         <segue destination="QJs-QE-FRV" kind="relationship" relationship="viewControllers" id="Jz3-j0-t1o"/>
                         <segue destination="ecR-y6-3ZH" kind="relationship" relationship="viewControllers" id="zwL-3c-4j5"/>
                     </connections>
@@ -509,14 +501,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IbB-k1-AjL">
-                                <rect key="frame" x="0.0" y="125" width="414" height="776"/>
+                                <rect key="frame" x="0.0" y="45" width="414" height="714"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="tsv-4I-Ju0" kind="embed" id="V1C-u0-oK0"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jb6-00-kvb">
-                                <rect key="frame" x="0.0" y="119" width="414" height="776"/>
+                                <rect key="frame" x="0.0" y="45" width="414" height="714"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="06r-Bm-11v" kind="embed" id="bL9-w6-94i"/>
@@ -534,27 +526,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XEF-TO-9Iy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1279.7101449275362" y="-490.17857142857139"/>
-        </scene>
-        <!--Home-->
-        <scene sceneID="QEw-Jm-1PN">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="OGO-sw-VWa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="z2s-Ah-I7N"/>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="0Jb-VO-7S4"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZcX-hw-It0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="tsv-4I-Ju0" kind="relationship" relationship="rootViewController" id="SOh-kG-XdT"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="H83-7j-MYz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1928.985507246377" y="-188.16964285714286"/>
+            <point key="canvasLocation" x="1995.6521739130437" y="531.69642857142856"/>
         </scene>
         <!--Profile-->
         <scene sceneID="O9w-lX-2Ph">
@@ -573,14 +545,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DfK-Sh-KtW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3860.8695652173915" y="-188.16964285714286"/>
+            <point key="canvasLocation" x="3645" y="-188"/>
         </scene>
         <!--Media View Controller-->
         <scene sceneID="Cvw-h3-sMS">
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="EXW-6u-6nW" customClass="MediaViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uk9-Zn-j5w">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="776"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1d-cz-2Uv">
@@ -782,7 +754,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Geo-J5-RrN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1995.6521739130437" y="1204.6875"/>
+            <point key="canvasLocation" x="2806" y="1219"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="nHA-gK-M3a">
@@ -819,14 +791,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="khU-7a-IX8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3695.652173913044" y="491.51785714285711"/>
+            <point key="canvasLocation" x="4439" y="492"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="QVL-wt-Ahw">
             <objects>
                 <viewController id="06r-Bm-11v" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Y6u-D0-qzF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="776"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Sav-oo-Bnu"/>
@@ -834,16 +806,17 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jan-6w-Wuw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-287" y="-479"/>
+            <point key="canvasLocation" x="509" y="1219"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Home-->
         <scene sceneID="dNk-fc-hhu">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="RDi-Q1-Bd7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="FSB-dU-QWf"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="ZmB-Bj-Ey9"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Aew-h6-ERj">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -853,13 +826,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sxe-CY-hnv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="369.56521739130437" y="-490.17857142857139"/>
+            <point key="canvasLocation" x="1996" y="-188"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="rrg-0j-MUH"/>
-        <segue reference="sar-WW-e4X"/>
-        <segue reference="V1C-u0-oK0"/>
+        <segue reference="Bgt-6p-HeZ"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="checkmark.circle" catalog="system" width="128" height="121"/>
