--- a/Watch Next/Base.lproj/Main.storyboard
+++ b/Watch Next/Base.lproj/Main.storyboard
@@ -526,7 +526,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XEF-TO-9Iy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1995.6521739130437" y="531.69642857142856"/>
+            <point key="canvasLocation" x="1996" y="492"/>
         </scene>
         <!--Profile-->
         <scene sceneID="O9w-lX-2Ph">
@@ -793,20 +793,57 @@
             </objects>
             <point key="canvasLocation" x="4439" y="492"/>
         </scene>
-        <!--View Controller-->
+        <!--Suggestions View Controller-->
         <scene sceneID="QVL-wt-Ahw">
             <objects>
-                <viewController id="06r-Bm-11v" sceneMemberID="viewController">
+                <viewController id="06r-Bm-11v" customClass="SuggestionsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Y6u-D0-qzF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cTq-X7-OM2">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EPU-gZ-6hm">
+                                    <size key="itemSize" width="175" height="210"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SuggestionCell" id="DRI-Xc-yXV" customClass="MediaCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="172" height="220"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bfR-F2-05h">
+                                            <rect key="frame" x="0.0" y="0.0" width="172" height="220"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tYy-K0-l42">
+                                                    <rect key="frame" x="0.0" y="0.0" width="175" height="210"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="172" height="220"/>
+                                        <connections>
+                                            <outlet property="posterView" destination="tYy-K0-l42" id="Hi4-Ir-PJ4"/>
+                                            <segue destination="EXW-6u-6nW" kind="show" id="5vh-FY-QgW"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Sav-oo-Bnu"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="cTq-X7-OM2" id="JP3-bk-9xu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jan-6w-Wuw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="509" y="1219"/>
+            <point key="canvasLocation" x="508.69565217391306" y="1218.75"/>
         </scene>
         <!--Home-->
         <scene sceneID="dNk-fc-hhu">
@@ -830,7 +867,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="rrg-0j-MUH"/>
+        <segue reference="5vh-FY-QgW"/>
         <segue reference="Bgt-6p-HeZ"/>
     </inferredMetricsTieBreakers>
     <resources>
