--- a/Watch Next/Base.lproj/Main.storyboard
+++ b/Watch Next/Base.lproj/Main.storyboard
@@ -835,6 +835,19 @@
                                                             <segue destination="amX-gB-8MN" kind="show" id="jPO-n7-lLI"/>
                                                         </connections>
                                                     </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byr-Xp-Dp9">
+                                                        <rect key="frame" x="32" y="234" width="154" height="30"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal" title="Change Profile Picture"/>
+                                                        <connections>
+                                                            <action selector="changePPTap:" destination="QVc-yU-7AF" eventType="touchUpInside" id="960-Vn-Y3j"/>
+                                                        </connections>
+                                                    </button>
+                                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="hEu-w6-Hl4">
+                                                        <rect key="frame" x="189" y="403" width="37" height="37"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </activityIndicatorView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
@@ -867,6 +880,7 @@
                     <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="Mbz-Al-4rQ"/>
                     <navigationItem key="navigationItem" id="Bc3-51-vYv"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="hEu-w6-Hl4" id="bgT-pk-ZHF"/>
                         <outlet property="profilePictureView" destination="ruf-OO-QoD" id="bkf-77-TcV"/>
                         <outlet property="usernameLabel" destination="HsA-ab-7j9" id="OiO-0q-zva"/>
                         <outlet property="watchNextNumLabel" destination="cz4-7r-iwe" id="OdI-Xu-usX"/>
